--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^11.2.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
