--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dropzone": "^11.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "xlsx": "^0.16.8"
   },
   "version": "0.1.0",
   "devDependencies": {
