--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "papaparse": "^5.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "turbolinks": "^5.2.0",
     "xlsx": "^0.16.8"
