--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "checkbox-radio": "^1.1.1",
     "papaparse": "^5.3.0",
+    "pretty-checkbox": "^3.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
