--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "turbolinks": "^5.2.0",
+    "underscore": "^1.11.0",
     "xlsx": "^0.16.8"
   },
   "version": "0.1.0",
